--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <title>BurgerBar</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/assets/js/burgers.js"></script>
-    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="/assets/js/scraper.js"></script>
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="/assets/css/scraper_style.css" type="text/css" />
 </head>
 
