added css general layout, need to connect back end to front end

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,15 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>BurgerBar</title>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/assets/js/scraper.js"></script>
-    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="/assets/css/scraper_style.css" type="text/css" />
+    <title>Real Estate News</title>
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/scraper_style.css" type="text/css" />
 </head>
 
 <body>
     {{{ body }}}
+    <script src="/js/scraper.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+    </script>
 </body>
 
-</html> 
+</html>
