--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,11 @@
-<div class="navbar">
-    <div class="logo"><h2>TheReal Scraper</h2></div>
 
-    <div class="links">
-        <a href="/index" class="homeLink">Home</a>
-        <a href="/articles" class="savedArticlesLink">Saved Articles</a>
-        <a href="/scrape" class="scraperLink">Scrape New Articles</a>
-    </div>
-</div>
-
-<div class="wrapper">
+<div class="indexWrapper">
     <div class="introInfo">
         <h1 class="title">Welcome To The Number One Real Estate News Aggregator</h1>
         <div class="sub-text">
-            <p class="text-center">On this page you can find all of the most up to date Real Estate new on the web!
-                You can
-                even add your own personalized notes to each article and save it for later!</p>
+            <p class="text-center">Click the Saved Articles tab if you would like to view all of your previously saved articles. On that page, you can even add your own personalized notes to each article and save it for later! If it's been a while - click the Scrape New Articles tab in order to upadate your library!
+            </p>
         </div>
     </div>
-    <div id="articles"></div>
-    <div id="notes"></div>
 </div>
 
