--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+
+    <div class="navbar">
+    <div class="logo"><h2>TheReal Scraper</h2></div>
+
+    <div class="links">
+        <a href="/index" class="homeLink">Home</a>
+        <a href="/articles" class="savedArticlesLink">Saved Articles</a>
+        <a href="/scrape" class="scraperLink">Scrape New Articles</a>
+    </div>
+</div>
+
     {{{ body }}}
     <script src="/js/scraper.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
