have data passing through. Routes working.

--- a/public/css/scraper_style.css
+++ b/public/css/scraper_style.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(../assets/img/Real-Estate.jpg);
     background-size: 100%;
-    margin: 0px;
+    margin: 0;
 }
 
 .navbar {
