--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -1,5 +1,14 @@
-
 <div class="wrapper">
-    <div id="articles"></div>
-    <div id="notes"></div>
+    <div id="articles">
+        {{#each articles}}
+        <div class="card">
+            <div class="container">
+                <h4>{{this.title}}</h4>
+                <p>Article ID: {{this.id}}</p>
+                <p>Article Description: {{this.description}}</p>
+                <a href="{{this.link}}" class="articleLinks">Link To Article</a>
+            </div>
+        </div>
+    </div>
+       {{/each}}
 </div>
