--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,25 +6,29 @@
     <title>Real Estate News</title>
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/scraper_style.css" type="text/css" />
+
 </head>
 
 <body>
 
     <div class="navbar">
-    <div class="logo"><h2>TheReal Scraper</h2></div>
+        <div class="logo">
+            <h2>TheReal Scraper</h2>
+        </div>
 
-    <div class="links">
-        <a href="/index" class="homeLink">Home</a>
-        <a href="/articles" class="savedArticlesLink">Saved Articles</a>
-        <a href="/scrape" class="scraperLink">Scrape New Articles</a>
+        <div class="links">
+            <a href="/" class="homeLink">Home</a>
+            <a href="/articles" class="savedArticlesLink">Saved Articles</a>
+            <a href="/scrape" class="scraperLink">Scrape New Articles</a>
+        </div>
     </div>
-</div>
 
     {{{ body }}}
-    <script src="/js/scraper.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
     </script>
+    <script src="/js/scraper.js"></script>
 </body>
 
 </html>
