--- a/public/css/scraper_style.css
+++ b/public/css/scraper_style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url(../assets/img/Real-Estate.jpg);
     background-size: 100%;
+    display: grid;
     margin: 0;
 }
 
@@ -39,7 +40,7 @@ a:hover {
 .indexWrapper {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: minmax(200px, 0px) 1fr 1fr;
+    grid-template-rows: minmax(100px, 0px) 1fr 1fr;
     font-family: Georgia, Times, "Times New Roman", serif;
     background-color: #e4e4e4;
     opacity: 0.8;
@@ -68,5 +69,31 @@ a:hover {
 }
 
 /* BELOW IS ALL CONTENT FOR ARTICLES.HANDLEBARS */
+.articleWrapper {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-auto-flow: column;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    background-color: #e4e4e4;
+    opacity: 0.8;
+    grid-gap: 20px;
+    padding: 0px 10px;
+    margin: 10px 0px;
+}
 
+.articles {
+    grid-column-start: 2;
+    grid-column-end: 8;
+}
+
+.card {
+    border: black solid 4px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.buttonsDiv {
+    float: right;
+}
 /* BELOW IS ALL CONTENT FOR SCRAPER.HANDLEBARS */
