--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,9 +17,9 @@
         </div>
 
         <div class="links">
-            <a href="/" class="homeLink">Home</a>
-            <a href="/articles" class="savedArticlesLink">Saved Articles</a>
-            <a href="/scrape" class="scraperLink">Scrape New Articles</a>
+            <a href="/showscraped" class="showArticles">Show Articles</a>
+            <a href="/savedarticles" class="savedArticlesLink">Saved Articles</a>
+            <a href="/" class="scraperLink">Scrape New Articles</a>
         </div>
     </div>
 
