--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,27 @@
-
 <div class="indexWrapper">
     <div class="introInfo">
         <h1 class="title">Welcome To The Number One Real Estate News Aggregator</h1>
         <div class="sub-text">
-            <p class="text-center">Click the Saved Articles tab if you would like to view all of your previously saved articles. On that page, you can even add your own personalized notes to each article and save it for later! If it's been a while - click the Scrape New Articles tab in order to upadate your library!
+            <p class="text-center">Click the Saved Articles tab if you would like to view all of your previously saved
+                articles. On that page, you can even add your own personalized notes to each article and save it for
+                later! If it's been a while - click the Scrape New Articles tab in order to upadate your library!
             </p>
         </div>
     </div>
+    <div class="scrapedArticleWrapper">
+        <div class="articles">
+            {{#each articles}}
+            <div class="card">
+                <h4>{{this.title}}</h4>
+                <p>Article ID: {{this.id}}</p>
+                <p>Article Description: {{this.description}}</p>
+                <a href="{{this.link}}" class="articleLinks">Link To Article</a>
+                <div class="buttonsDiv">
+                    <button type="button">Article Notes</button>
+                    <button type="button">Delete From Saved</button>
+                </div>
+            </div>
+            {{/each}}
+        </div>
+    </div>
 </div>
-
