got saved articles to show based on boolean

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,8 +16,7 @@
             <p>Article Description: {{this.description}}</p>
             <a href="{{this.link}}" class="articleLinks">Link To Article</a>
             <div class="buttonsDiv">
-                <button type="button">Article Notes</button>
-                <button type="button">Delete From Saved</button>
+                <button type="button">Add To Saved</button>
             </div>
         </div>
         {{/each}}
