--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,8 @@
 <body>
 
     <div class="navbar">
-        <div class="logo"> 
-            <a href="/" class="logo"><h2>TheReal Scraper</h2></a>
+        <div class="logo" onclick="window.location.href='/'">
+            <h2>TheReal Scraper</h2>
         </div>
 
         <div class="links">
@@ -27,7 +27,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="/js/scraper.js"></script>
 </body>
 
