got delete article from DB working

--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -7,8 +7,8 @@
             <p>Article Description: {{this.description}}</p>
             <a href="{{this.link}}" class="articleLinks">Link To Article</a>
             <div class="buttonsDiv">
-                <button type="button">Article Notes</button>
-                <button type="button">Delete From Saved</button>
+                <button type="button" class="openNotes">Article Notes</button>
+                <button type="button" class="deleteArticle" id="{{this.id}}">Delete From Saved</button>
             </div>
         </div>
         {{/each}}
