--- a/public/css/scraper_style.css
+++ b/public/css/scraper_style.css
@@ -90,6 +90,55 @@ a:hover {
     float: right;
 }
 
+.submitNote {
+    width: 20%;
+    float: right;
+}
+
+.notesModalBackground {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */   
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    font-family: Georgia, Times, "Times New Roman", serif;
+
+}
+
+.notesModalContent {
+    border: black solid 4px;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: aqua;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    font-size: 24px;
+  }
+
+  .notesTitle {
+    width: 100%;
+    margin: 10px 0px;
+    clear: both;
+    box-sizing: border-box
+  } 
+  
+  .notesText {
+    width: 100%;
+    margin: 10px 0px;
+    clear: both;
+    height: 50px;
+    box-sizing: border-box
+  }
+
 /* BELOW IS ALL CONTENT FOR SCRAPER.HANDLEBARS */
 .scrapedArticleWrapper {
     grid-row-start: 2;
